code refactoring; swagger /user
